--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "trial.react",
+  "name": "Testnode",
   "version": "0.1.0",
   "private": true,
   "main":"index.js",
@@ -16,26 +16,9 @@
     "mongoose": "^6.6.1"
 
   },
-  "devDependencies": {
-    "redux-devtools-extension": "^2.13.8"
-  },
   "scripts": {
     "start": "node index.js"
 
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
   }
+
 }
